[gd_scene load_steps=24 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Roboto-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://back 200x200.png" type="Texture" id=3]
[ext_resource path="res://Full 200x200.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.956863, 0.0980392, 0.878431 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0431373, 0.678431, 0.105882, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.956863, 0.0980392, 0.878431 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 0.862745 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.733333, 0.0156863, 0.0156863, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0, 0, 0.862745 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.54902, 0.00784314, 1, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.439216, 0.0117647, 0.796078, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=10]
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.54902, 0.00784314, 1, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=12]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=16]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=17]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=18]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=19]
size = 37
font_data = ExtResource( 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -0.814514
margin_top = -1.10803
margin_right = 1023.19
margin_bottom = 766.892

[node name="Button" type="Button" parent="."]
margin_left = 33.077
margin_top = 261.667
margin_right = 313.077
margin_bottom = 433.667
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Начало раунда"

[node name="Button2" type="Button" parent="."]
margin_left = 712.029
margin_top = 261.667
margin_right = 992.029
margin_bottom = 433.667
focus_mode = 0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Конец раунда"

[node name="Button3" type="Button" parent="."]
visible = false
margin_left = 355.0
margin_top = 261.667
margin_right = 670.0
margin_bottom = 433.667
focus_mode = 0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Смена официанта"

[node name="Button4" type="Button" parent="."]
visible = false
margin_left = 372.0
margin_top = 261.667
margin_right = 652.0
margin_bottom = 433.667
focus_mode = 0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Кинопремия"

[node name="Texture45" type="TextureProgress" parent="."]
visible = false
margin_left = 412.0
margin_top = 542.997
margin_right = 612.0
margin_bottom = 742.997
max_value = 45.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
fill_mode = 4

[node name="Texture420" type="TextureProgress" parent="."]
visible = false
margin_left = 412.0
margin_top = 542.997
margin_right = 612.0
margin_bottom = 742.997
max_value = 420.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
fill_mode = 4

[node name="Texture80" type="TextureProgress" parent="."]
margin_left = 412.0
margin_top = 542.997
margin_right = 612.0
margin_bottom = 742.997
max_value = 80.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
fill_mode = 4

[node name="ButtonTimer45" type="Button" parent="."]
visible = false
margin_left = 410.0
margin_top = 543.466
margin_right = 610.0
margin_bottom = 743.466
focus_mode = 0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "45"
flat = true

[node name="ButtonTimer420" type="Button" parent="."]
margin_left = 412.0
margin_top = 543.892
margin_right = 612.0
margin_bottom = 743.892
focus_mode = 0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "420"
flat = true

[node name="ButtonTimer80" type="Button" parent="."]
visible = false
margin_left = 414.0
margin_top = 546.892
margin_right = 610.0
margin_bottom = 740.892
focus_mode = 0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "80"
flat = true

[node name="Timer45" type="Timer" parent="."]

[node name="Timer420" type="Timer" parent="."]

[node name="Timer80" type="Timer" parent="."]

[node name="Label45" type="Label" parent="."]
visible = false
margin_left = 410.0
margin_top = 469.0
margin_right = 611.0
margin_bottom = 734.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.54902, 0.00784314, 1, 1 )
text = "Таймер
Кинопремия"
align = 1

[node name="Label420" type="Label" parent="."]
margin_left = 410.0
margin_top = 466.0
margin_right = 609.0
margin_bottom = 722.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.54902, 0.00784314, 1, 1 )
text = "Таймер
7 минут"
align = 1

[node name="Label80" type="Label" parent="."]
visible = false
margin_left = 410.0
margin_top = 463.0
margin_right = 608.0
margin_bottom = 679.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.54902, 0.00784314, 1, 1 )
text = "Таймер
Официант"
align = 1

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 341.0
margin_bottom = 100.0
color = Color( 0.54902, 0.00784314, 1, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 341.0
margin_right = 682.0
margin_bottom = 100.0
color = Color( 0.737255, 0.737255, 0.737255, 1 )

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 682.0
margin_right = 1023.0
margin_bottom = 100.0
color = Color( 0.737255, 0.737255, 0.737255, 1 )

[node name="ButtonRound" type="Button" parent="."]
margin_right = 341.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Обычный раунд"
flat = true

[node name="ButtonFilm" type="Button" parent="."]
margin_left = 341.0
margin_right = 682.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Кинопремия"
flat = true

[node name="ButtonOfficiant" type="Button" parent="."]
margin_left = 682.0
margin_right = 1023.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Официант"
flat = true

[node name="LabelInfo" type="Label" parent="."]
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="ButtonTimer45" to="." method="_on_ButtonTimer45_pressed"]
[connection signal="pressed" from="ButtonTimer420" to="." method="_on_ButtonTimer420_pressed"]
[connection signal="pressed" from="ButtonTimer80" to="." method="_on_ButtonTimer80_pressed"]
[connection signal="timeout" from="Timer45" to="." method="_on_Timer45_timeout"]
[connection signal="timeout" from="Timer420" to="." method="_on_Timer420_timeout"]
[connection signal="timeout" from="Timer80" to="." method="_on_Timer80_timeout"]
[connection signal="pressed" from="ButtonRound" to="." method="_on_ButtonRound_pressed"]
[connection signal="pressed" from="ButtonFilm" to="." method="_on_ButtonFilm_pressed"]
[connection signal="pressed" from="ButtonOfficiant" to="." method="_on_ButtonOfficiant_pressed"]
